fix too small mat-card

--- a/client/src/assets/styles/components.scss
+++ b/client/src/assets/styles/components.scss
@@ -20,13 +20,17 @@
     text-align: center;
 }
 
-.os-card,
-.os-form-card {
-    max-width: 770px;
+.os-card {
+    max-width: 802px;
     margin-top: 20px !important;
+    margin-bottom: 20px !important;
     margin-left: auto !important;
     margin-right: auto !important;
     font-size: 16px;
+    .mat-mdc-form-field {
+        width: 100%;
+        padding: 10px 0;
+    }
 }
 
 .os-card {
@@ -37,14 +41,6 @@
     }
 }
 
-.os-form-card {
-    padding: 27px;
-
-    .mat-mdc-form-field {
-        width: 100%;
-        padding: 10px 0;
-    }
-}
 
 .os-form-card-mobile {
     margin-top: 20px !important;
